--- a/countries-api/package.json
+++ b/countries-api/package.json
@@ -1,6 +1,7 @@
 {
   "name": "countries-api",
   "version": "0.1.0",
+  "homepage": "https://Enzo1612.github.io/countries",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
